--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -19,6 +19,7 @@ packaging==20.9
 pathspec==0.8.1
 pluggy==0.13.1
 pre-commit==2.10.0
+psycopg2-binary==2.8.6
 py==1.10.0
 pyparsing==2.4.7
 pytest==6.2.2
