--- a/defend_data_capture/sample.env
+++ b/defend_data_capture/sample.env
@@ -1,2 +1,10 @@
 DJANGO_SECRET_KEY=supersecretkey
 DATABASE_URL=postgres://postgres:password@localhost:5432/defend
+
+# Staff SSO env vars
+AUTHBROKER_URL=https://sso.trade.gov.uk/
+AUTHBROKER_CLIENT_ID=look-in-passman
+AUTHBROKER_CLIENT_SECRET=look-in-passman
+# Allows access via http rather than https
+OAUTHLIB_INSECURE_TRANSPORT=1
+LOGIN_REDIRECT_URL=http://localhost:8000/auth/callback/
