Build static files using webpack and npm packages
Includes adding the GOV UK frontend and MOJ front end npm packages to add standard GOV UK styling to the project

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@ __pycache__/
 *.py[cod]
 defend_data_capture/env/
 .env
+
+node_modules
+npm-debug.log*
+defend_data_capture/assets/webpack_bundles
+webpack-stats.json
