--- a/defend_data_capture/requirements.txt
+++ b/defend_data_capture/requirements.txt
@@ -9,8 +9,9 @@ click==7.1.2
 distlib==0.3.1
 django>=3.1.6
 django-environ==0.4.5
-django-staff-sso-client==3.1.0
 django-reversion==3.0.9
+django-staff-sso-client==3.1.0
+django-webpack-loader==0.7.0
 djangorestframework==3.12.2
 factory-boy==3.2.0
 Faker==6.0.0
@@ -39,9 +40,12 @@ requests-oauthlib==1.3.0
 sentry-sdk==0.20.3
 six==1.15.0
 sqlparse==0.4.1
+tablib==3.0.0
 text-unidecode==1.3
 toml==0.10.2
 typed-ast==1.4.2
 typing-extensions==3.7.4.3
 urllib3==1.26.4
 virtualenv==20.4.0
+xlrd==2.0.1
+xlwt==1.3.0
