--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,11 @@ node_modules
 npm-debug.log*
 defend_data_capture/assets/webpack_bundles
 webpack-stats.json
+
+backend.pid
+
+# Folders and file auto-generated when cypress is run
+cypress/plugins/
+cypress/support/
+cypress/videos/
+cypress.json
