--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "sass-loader": "^8.0.0",
     "webpack": "^4.41.2",
     "webpack-bundle-tracker": "^0.4.3",
-    "webpack-cli": "^3.3.10",
+    "webpack-cli": "^3.3.10"
   },
   "devDependencies": {
+    "cypress": "^7.0.1",
     "webpack-dev-server": "^3.9.0"
   },
   "scripts": {
