--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@ministryofjustice/frontend": "^0.2.2",
     "css-loader": "^3.3.0",
+    "cypress": "^7.0.1",
     "extract-loader": "^3.1.0",
     "file-loader": "^5.0.2",
     "govuk-frontend": "^3.11.0",
