--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "webpack-cli": "^4.6.0"
   },
   "devDependencies": {
-    "cypress": "^7.0.1",
+    "axe-core": "^4.1.4",
+    "cypress": "^6.9.1",
+    "cypress-axe": "^0.12.2",
     "webpack-dev-server": "^3.9.0"
   },
   "scripts": {
