--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -15,8 +15,6 @@ jobs:
           python-version: '3.8.8'
       - name: Install python packages
         run: pip install -r defend_data_capture/requirements.txt
-      - name: Run unit tests
-        run: which pip && python --version && pytest defend_data_capture --collect-only
       - name: Setup node
         uses: actions/setup-node@v2
         with:
@@ -27,6 +25,7 @@ jobs:
         run: nohup npm run dev &
       - name: Bring up db container
         run: docker-compose -f docker-compose.yaml up -d
-
+      - name: Run unit tests
+        run: pytest defend_data_capture
       - name: Run functional tests
         run: bash run_functional_tests.sh
