--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ et-xmlfile==1.0.1
 factory-boy==3.2.0
 Faker==6.0.0
 filelock==3.0.12
+gunicorn==20.1.0
 hijri-converter==2.1.1
 holidays==0.10.5.2
 identify==1.5.13
