--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "webpack-dev-server": "^3.9.0"
   },
   "scripts": {
-    "dev": "webpack --config webpack.config.js --mode development --watch",
+    "dev": "webpack --config webpack.config.js --mode=development --watch",
     "build": "webpack --config webpack.config.js",
-    "clean": "rm -f .defend-data-capture/assets/webpack_bundles/*"
+    "clean": "rm -f .defend-data-capture/assets/webpack_bundles/*",
+    "heroku-postbuild": "npm run build"
   }
 }
