--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "dev": "webpack --config webpack.config.js --mode=development --watch",
     "build": "webpack --config webpack.config.js",
-    "clean": "rm -f .defend-data-capture/assets/webpack_bundles/*",
+    "clean": "rm -f defend_data_capture/assets/webpack_bundles/*",
     "heroku-postbuild": "npm run build"
   }
 }
