--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -29,5 +29,7 @@ jobs:
         run: docker-compose -f docker-compose.yaml up -d
       - name: Run unit tests
         run: pytest defend_data_capture
+        env:
+          SET_HSTS_HEADERS: ''
       - name: Run functional tests
         run: bash run_functional_tests.sh
