--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ cfgv==3.2.0
 chardet==4.0.0
 click==7.1.2
 convertdate==2.3.2
+coverage==5.5
 defusedxml==0.6.0
 diff-match-patch==20200713
 distlib==0.3.1
@@ -45,6 +46,7 @@ py==1.10.0
 PyMeeus==0.5.11
 pyparsing==2.4.7
 pytest==6.2.2
+pytest-cov==2.12.0
 pytest-django==4.1.0
 python-dateutil==2.8.1
 pytz==2020.5
