--- a/defend_data_capture/sample.env
+++ b/defend_data_capture/sample.env
@@ -7,3 +7,5 @@ AUTHBROKER_CLIENT_ID=look-in-passman
 AUTHBROKER_CLIENT_SECRET=look-in-passman
 # Allows access via http rather than https
 OAUTHLIB_INSECURE_TRANSPORT=1
+# Allows using Django development server which doesn't support https
+SET_HSTS_HEADERS=False
