--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -30,6 +30,6 @@ jobs:
       - name: Run unit tests
         run: pytest defend_data_capture
         env:
-          SET_HSTS_HEADERS: ''
+          SET_HSTS_HEADERS: False
       - name: Run functional tests
         run: bash run_functional_tests.sh
