--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "defend-data-capture",
+  "name": "update-supply-chain-information",
   "version": "1.0.0",
   "description": "A Django app focused on collecting data about the UK's most valuable supply chains. This app is primarily a form in which other government departments can submit updates and provide information about the supply chains they manage.",
   "private": true,
