--- a/update_supply_chain_information/sample.env
+++ b/update_supply_chain_information/sample.env
@@ -1,5 +1,5 @@
 DJANGO_SECRET_KEY=supersecretkey
-DATABASE_URL=postgres://postgres:password@localhost:5432/defend
+DATABASE_URL=postgres://postgres:password@localhost:5432/supply_chain_info
 
 # Staff SSO env vars
 AUTHBROKER_URL=https://sso.trade.gov.uk/
