Enable `DEBUG` in local environment.

--- a/defend_data_capture/sample.env
+++ b/defend_data_capture/sample.env
@@ -9,3 +9,5 @@ AUTHBROKER_CLIENT_SECRET=look-in-passman
 OAUTHLIB_INSECURE_TRANSPORT=1
 # Allows using Django development server which doesn't support https
 SET_HSTS_HEADERS=False
+# Enable DEBUG
+DJANGO_DEBUG=True
