Add cookie settings

--- a/defend_data_capture/sample.env
+++ b/defend_data_capture/sample.env
@@ -11,3 +11,10 @@ OAUTHLIB_INSECURE_TRANSPORT=1
 SET_HSTS_HEADERS=False
 # Enable DEBUG
 DJANGO_DEBUG=True
+
+# Settings for CSRF and Session cookies
+CSRF_COOKIE_SECURE=False
+CSRF_COOKIE_HTTPONLY=False
+SESSION_COOKIE_SECURE=False
+# Optional, defaults to 36000 (10 hours)
+SESSION_COOKIE_AGE=
