--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,4 +7,5 @@ updates:
     ignore:
       - dependency-name: "ws"
         versions: ["5.x", "7.4.5"]
-
+      - dependency-name: "webpack-dev-server"
+        versions: ["3.x"]
