Comment out SESSION_COOKIE_AGE when has no value

--- a/update_supply_chain_information/sample.env
+++ b/update_supply_chain_information/sample.env
@@ -17,4 +17,4 @@ CSRF_COOKIE_SECURE=False
 CSRF_COOKIE_HTTPONLY=False
 SESSION_COOKIE_SECURE=False
 # Optional, defaults to 36000 (10 hours)
-SESSION_COOKIE_AGE=
+# SESSION_COOKIE_AGE=
