--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -36,5 +36,5 @@ jobs:
         with:
           fail_ci_if_error: true
           verbose: true
-      # - name: Run functional tests
-      #   run: bash run_functional_tests.sh
+      - name: Run functional tests
+        run: bash run_functional_tests.sh
