--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "file-loader": "^6.2.0",
     "govuk-frontend": "^3.12.0",
     "mini-css-extract-plugin": "^1.4.1",
-    "node-sass": "^6.0.0",
+    "sass": "^1.34.1",
     "sass-loader": "^12.1.0",
     "webpack": "^5.38.1",
     "webpack-bundle-tracker": "^1.0.0",
