--- a/update_supply_chain_information/sample.env
+++ b/update_supply_chain_information/sample.env
@@ -18,3 +18,6 @@ CSRF_COOKIE_HTTPONLY=False
 SESSION_COOKIE_SECURE=False
 # Optional, defaults to 36000 (10 hours)
 # SESSION_COOKIE_AGE=
+
+# Optional when running locally
+#FEEDBACK_GROUP_EMAIL=
