--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -7,6 +7,8 @@ jobs:
       DATABASE_URL: postgres://postgres:password@localhost:5432/supply_chain_info
       OAUTHLIB_INSECURE_TRANSPORT: 1
       RUNNING_LOCALLY: 0
+      HAWK_ACCESS_KEY_ID: 'activitystream'
+      HAWK_SECRET_ACCESS_KEY: 'wk2l6OBYRVnyCYq3S9n3Y8IQ0i2M4e8o'
     steps:
       - uses: actions/checkout@v2
       - name: Setup python
