Change Hawk authentication key names to correspond to Activity Stream environment variables, and make dummy values for testing more obvious.

--- a/update_supply_chain_information/sample.env
+++ b/update_supply_chain_information/sample.env
@@ -21,3 +21,7 @@ SESSION_COOKIE_SECURE=False
 
 # Optional when running locally
 #FEEDBACK_GROUP_EMAIL=
+
+# Hawk authentication for Activity Stream
+HAWK_UNIQUE_ID=activitystream_uniqueid
+HAWK_SECRET_ACCESS_KEY=activitystream_secret
