Treat warnings in tests as errors. Fixes #162

--- a/update_supply_chain_information/pytest.ini
+++ b/update_supply_chain_information/pytest.ini
@@ -4,4 +4,5 @@ python_files = tests.py test_*.py *_tests.py
 
 ; RemovedInDjango41Warning: 'webpack_loader' defines default_app_config = 'webpack_loader.apps.WebpackLoaderConfig'. Django now detects this configuration automatically. You can remove default_app_config.
 filterwarnings =
+    error
     ignore::PendingDeprecationWarning:django.*:
