Adding a command to make local user as admin, intended for dev purpose only!

--- a/update_supply_chain_information/sample.env
+++ b/update_supply_chain_information/sample.env
@@ -25,3 +25,6 @@ SESSION_COOKIE_SECURE=False
 # Hawk authentication for Activity Stream
 HAWK_UNIQUE_ID=activitystream_uniqueid
 HAWK_SECRET_ACCESS_KEY=activitystream_secret
+
+# First name of the user to elevate as admin
+#LOCAL_USER_FIRST_NAME=Prashanth
