Include country information (configured in environment) and strategic action progress Quicksight links.
This needs
```
QUICKSIGHT_COUNTRIES_DASHBOARD_URL=https://data.trade.gov.uk/visualisations/link/2ade7245-2629-4dff-a2ff-d700b5a74807
``` in .env, otherwise the links will be to `about:blank`.

--- a/update_supply_chain_information/sample.env
+++ b/update_supply_chain_information/sample.env
@@ -26,5 +26,8 @@ SESSION_COOKIE_SECURE=False
 HAWK_UNIQUE_ID=activitystream_uniqueid
 HAWK_SECRET_ACCESS_KEY=activitystream_secret
 
+# Link to QuickSight country information dashboard.
+QUICKSIGHT_COUNTRIES_DASHBOARD_URL=https://data.trade.gov.uk/visualisations/link/2ade7245-2629-4dff-a2ff-d700b5a74807
+
 # First name of the user to elevate as admin
 #LOCAL_USER_FIRST_NAME=Prashanth
