fix: LSGH-61 bump set-value dev dependency.

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "axe-core": "^4.3.3",
     "cypress": "^6.9.1",
     "cypress-axe": "^0.13.0",
-    "webpack-dev-server": "^3.9.0"
+    "webpack-dev-server": "^3.9.0",
+    "set-value": ">=4.0.1"
   },
   "scripts": {
     "dev": "webpack --config webpack.config.js --mode=development --watch",
