--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,30 @@ version: '3'
 services:
   db:
     image: postgres:12
-    restart: unless-stopped
-    environment:
-      POSTGRES_PASSWORD: password
+    restart: always
     ports:
       - "5432:5432"
+    volumes:
+      - ./setup/init.sql:/docker-entrypoint-initdb.d/init.sql
+    environment:
+      - POSTGRES_PASSWORD=postgres
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+  supply_chain:
+    build:
+      context: .
+      dockerfile: "docker/Dockerfile.dev"
+    env_file: .env
+    command: "python manage.py runserver 0.0.0.0:8000"
+    volumes:
+      - ./update_supply_chain_information:/app/
+      - ./cypress:/app/cypress
+      - ./webpack-stats.json:/webpack-stats.json
+    ports:
+      - "0.0.0.0:8000:8000"
+    depends_on:
+      - db
+    restart: always
