--- a/requirements.in/prod.in
+++ b/requirements.in/prod.in
@@ -1,2 +1,8 @@
 # Constrain to base requirements
 -r ../requirements/base.txt
+# Support async access using gevent
+greenlet==0.4.16
+gevent==20.6.1
+psycogreen==1.0.2
+# Other
+elastic-apm==6.2.0
