Setup PII and secret exclude

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,6 +2,6 @@
 DJANGO_SETTINGS_MODULE = config.settings
 python_files = tests.py test_*.py *_tests.py
 
-; RemovedInDjango41Warning: 'webpack_loader' defines default_app_config = 'webpack_loader.apps.WebpackLoaderConfig'. Django now detects this configuration automatically. You can remove default_app_config.
+; RemovedInDjango41Warning: 'webpack_loader' defines default_app_config = 'webpack_loader.apps.WebpackLoaderConfig'. Django now detects this configuration automatically. You can remove default_app_config. /PS-IGNORE
 filterwarnings =
     ignore::PendingDeprecationWarning:django.*:
