--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ AUTHBROKER_CLIENT_ID=look-in-passman
 AUTHBROKER_CLIENT_SECRET=look-in-passman
 # Allows access via http rather than https
 OAUTHLIB_INSECURE_TRANSPORT=1
+LOGIN_REDIRECT_URL=http://localhost:8000/auth/callback/
 # Allows using Django development server which doesn't support https
 SET_HSTS_HEADERS=False
 # Enable DEBUG
