Update example environment to include new links from environment.

--- a/.env.example
+++ b/.env.example
@@ -27,7 +27,11 @@ HAWK_INCOMING_ACCESS_KEY=xxx
 HAWK_INCOMING_SECRET_KEY=xxx
 
 # Link to QuickSight country information dashboard.
+# When adding a dashboard visualisation link, make sure it's the Data Workspace URL
+# and not the internal QuickSight one.
 QUICKSIGHT_COUNTRIES_DASHBOARD_URL=xxx
 QUICKSIGHT_OVERSEAS_INTELLIGENCE_DASHBOARD_URL=xxx
 QUICKSIGHT_RISK_MONITORING_DASHBOARD_URL=xxx
 QUICKSIGHT_VULNERABILITY_ANALYSIS_DASHBOARD_URL=xxx
+QUICKSIGHT_VULNERABILITY_ANALYSIS_COUNTRIES_DASHBOARD_URL=xxx
+QUICKSIGHT_VULNERABILITY_ANALYSIS_PRODUCTS_DASHBOARD_URL=xxx
