--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@ministryofjustice/frontend": "^0.2.5",
     "css-loader": "^6.2.0",
     "extract-loader": "^5.1.0",
+    "loader-utils": "^2.0.3",
     "file-loader": "^6.2.0",
     "govuk-frontend": "^3.13.0",
     "mini-css-extract-plugin": "^2.2.0",
