--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "extract-loader": "^5.1.0",
     "file-loader": "^6.2.0",
     "govuk-frontend": "^3.14.0",
+    "json5": ">=1.0.2",
     "loader-utils": "^2.0.4",
     "mini-css-extract-plugin": "^2.7.0",
     "sass": "^1.56.1",
