--- a/requirements.in/dev.in
+++ b/requirements.in/dev.in
@@ -5,6 +5,6 @@ django-debug-toolbar==3.2.1
 
 # Development tools
 pip-tools>=6.0.1
-locust==1.5.3
+locust==2.15.1
 flake8
-black==20.8b1
+black==22.3.0
