--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ node_modules
 npm-debug.log*
 update_supply_chain_information/assets/webpack_bundles
 static
+!static/.gitkeep
 webpack-stats.json
 .idea
 
