--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - run:
           name: run webpack
           command: npm run dev
-          background: true
+          #background: true
       - run:
           name: build docker
           command: make build
