--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -2,5 +2,5 @@ FROM python:3.8
 ADD . /app
 WORKDIR /app
 
-RUN pip install pip~=21.2
+#RUN pip install pip~=21.2
 RUN pip install -r requirements/dev.txt
