--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: "circleci/python:3.9.9"
+      - image: "circleci/python:3.9.9-node"
     steps:
       - checkout
       - run:
