--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,8 @@
 version: 2
 jobs:
   build:
-    docker:
-      - image: "circleci/python:3.9.9-node"
+    machine:
+      image: ubuntu-2004:2023.04.2
     steps:
       - checkout
       - run:
