--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,7 +6,7 @@ blinker==1.6.2; python_version >= "3.8"
 brotli==1.0.9; python_version >= "3.7"
 cachecontrol==0.12.14; python_version >= "3.6" and python_version < "4.0" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0")
 cachy==0.3.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
-certifi==2020.12.5
+certifi==2022.12.7; python_version >= "3.6"
 cffi==1.15.1
 cfgv==3.2.0; python_full_version >= "3.6.1"
 chardet==4.0.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
