Updating; Cleo, Poetry, Virtualenv, Filelock & importlib-metadata

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
-poetry = "*"
+poetry = "1.5.1"
 python = "~=3.8.17"
 appdirs= "~=1.4.4"
 asgiref= "~=3.3.2"
@@ -32,13 +32,13 @@ djangorestframework= "~=3.12.2"
 et-xmlfile= "~=1.0.1"
 factory-boy= "~=3.2.0"
 Faker= "~=6.0.0"
-filelock= "~=3.0.12"
+filelock= "~=3.12.2"
 hawkrest= "~=1.0.1"
 hijri-converter= "~=2.1.1"
 holidays= "~=0.10.5.2"
 identify= "~=1.5.13"
 idna= "~=2.10"
-importlib-metadata= "~=4.0.1"
+importlib-metadata= "~=4.4.0"
 iniconfig= "~=1.1.1"
 itsdangerous= "~=2.1.2"
 jdcal= "~=1.4.1"
@@ -83,7 +83,7 @@ toml= "~=0.10.2"
 typed-ast= "~=1.5.4"
 typing-extensions= "~=3.10.0.0"
 urllib3= "~=1.26.15"
-virtualenv= "~=20.4.0"
+virtualenv= "~=20.24.0"
 Werkzeug= "~=2.3.1"
 whitenoise= "~=5.2.0"
 xlrd= "~=2.0.1"
