--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,6 +97,7 @@ gevent= "~=22.10.2"
 psycogreen= "~=1.0.2"
 elastic-apm= "~=6.2.0"
 gunicorn = "~=20.0.4,<21"
+cryptography = "~=41.0.3"
 
 [tool.poetry.dev-dependencies]
 django-debug-toolbar= "~=3.2.1"
