--- a/codebuild/web/buildspec.yml
+++ b/codebuild/web/buildspec.yml
@@ -6,7 +6,8 @@ env:
     SLACK_CHANNEL_ID: "/codebuild/slack_channel_id"
     SLACK_TOKEN: "/codebuild/slack_api_token"
   variables:
-    BUILDER_VERSION: 0.2.395-full
+    PAKETO_BUILDER_VERSION: 0.2.395-full
+    LIFECYCLE_VERSION: 0.16.0
 
 phases:
   pre_build:
