--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -1,6 +1,6 @@
-FROM python:3.8.17
+FROM python:3.9.16
 ADD . /app
 WORKDIR /app
 
-#RUN pip install pip~=21.2
-RUN pip install -r requirements-dev.txt
+RUN pip install pip~=21.2
+RUN pip install -r requirements/dev.txt
