--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
 poetry = "1.5.1"
-python = "~=3.8.17"
+python = "~=3.9.16"
 appdirs= "~=1.4.4"
 asgiref= "~=3.3.2"
 attrs= "~=20.3.0"
@@ -17,9 +17,11 @@ click= "~=8.1.3"
 ConfigArgParse= "~=1.4.1"
 convertdate= "~=2.3.2"
 coverage= "~=5.5"
+dbt-copilot-python= "~=0.1.2"
 defusedxml= "~=0.6.0"
 diff-match-patch= "~=20200713"
 distlib= "~=0.3.1"
+dj-database-url= "~=2.0.0"
 Django= "~=3.2.20"
 django-environ= "~=0.4.5"
 django-import-export= "~=2.5.0"
@@ -69,7 +71,10 @@ pytest-cov= "~=2.12.0"
 pytest-django= "~=4.1.0"
 python-dateutil= "~=2.8.1"
 pytz= "~=2020.5"
-PyYAML= "~=5.4.1"
+# Had to downgrade this to get a succesful install.
+# See https://github.com/yaml/pyyaml/issues/724#issuecomment-1638587228
+# PyYAML= "~=5.4.1"
+PyYAML= "~=5.3.1"
 pyzmq= "~=22.2.1"
 regex= "~=2020.11.13"
 requests= "~=2.31.0"
@@ -103,7 +108,7 @@ cryptography = "~=41.0.3"
 django-debug-toolbar= "~=3.2.1"
 pip-tools = "~=6.0.1"
 locust = "~=2.15.1"
-flake8 = "~=4.0.1" 
+flake8 = "~=4.0.1"
 black = "~=22.3.0"
 
 
