--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -3,4 +3,4 @@ ADD . /app
 WORKDIR /app
 
 RUN pip install pip~=21.2
-RUN pip install -r requirements/dev.txt
+RUN pip install -r requirements-dev.txt
