--- a/codebuild/web/buildspec.yml
+++ b/codebuild/web/buildspec.yml
@@ -6,7 +6,14 @@ env:
     SLACK_CHANNEL_ID: "/codebuild/slack_channel_id"
     SLACK_TOKEN: "/codebuild/slack_api_token"
   variables:
-    PAKETO_BUILDER_VERSION: 0.2.397-full
+    PAKETO_BUILDER_VERSION: 0.2.433-full
+    # 0.2.443-full
+    # 0.2.430-full
+    # 0.2.427-full
+    # 0.2.423-full
+    # 0.2.410-full
+    # 0.2.404-full
+    # 0.2.400-full
     LIFECYCLE_VERSION: 0.16.0
 
 phases:
