--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -141,5 +141,5 @@ xattr==0.10.1; python_version >= "3.8" and python_version < "4.0" and sys_platfo
 xlrd==2.0.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
 xlwt==1.3.0
 zipp==3.4.2; python_version >= "3.6"
-zope.event==4.5.1
+zope.event==4.5.1; python_version >= "3.8"
 zope.interface==5.4.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
